--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -2,3 +2,4 @@
 <img [src]="product.image" alt="">
 <strong>{{ product.price | currency:'S/. ' }}</strong>
 <button (click)="addCart()">Agregar al carrito</button>
+<a [routerLink]="['/products',product.id]">Ver detalle</a>
