--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
-body {
-    margin: 0px;
-    padding: 0px;
-}
+// body {
+//     margin: 0px;
+//     padding: 0px;
+// }
 
 .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
