--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -5,7 +5,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/admin/products/create">Crear producto</a>
       <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <button mat-list-item (click)="logout()">Cerar sesión</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
